Improve default search for model naming

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -282,7 +282,7 @@
 
         (function () {
             var page = 0;
-            var searchString = "type:model,isplaceholder,exp10";
+            var searchString = "type:model,isplaceholder,added:10.2.7.54295|current";
             var sortCol = 0;
             var sortDesc = "asc";
 
