--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -91,13 +91,13 @@
                                 <tr><td>Interface files</td><td>Names interface files from ManifestInterfaceData.db2.</td></tr>
                                 <tr><td>Item textures</td><td>Item textures referenced from ItemDisplayInfo* DB2s.</td></tr>
                                 <tr><td>M2 models</td><td>Generates automatic (largely placeholder) names for M2 models and related files. <br /><b style="color: red">Note:</b> Will take several minutes!</td></tr>
-                                <tr><td>Map</td><td>Map-based naming of WDT, WDL, ADT, minimaps and maptextures. <br /><b style="color: red">Note:</b> Will take several minutes!</td></td></tr>
+                                <tr><td>Map</td><td>Map-based naming of WDT, WDL, ADT, minimaps and maptextures. <br /><b style="color: red">Note:</b> Will take several minutes!</td></tr>
                                 <tr><td>Music (zones)</td><td>Zone music referenced from ZoneMusic.db2 and ZoneIntroMusicTable.db2.</td></tr>
                                 <tr><td>SoundKits</td><td>Name sound files based on various sources.</td></tr>
                                 <tr><td>Spell textures</td><td>Very specific spell textures (chain effects and blendsets).</td></tr>
                                 <tr><td>Terrain Cube Maps</td><td>Cube maps used for reflections of terrain, also names liquid textures.</td></tr>
                                 <tr><td>Voice dialog (NPC)</td><td>Requires a data recording addon with recorded in-game data. Currently supported: <a href="https://www.curseforge.com/wow/addons/datamine" target="_blank">Datamine</a>, WoWDB Profiler, Wowhead Looter.</td></tr>
-                                <tr><td>WMO models</td><td>Generates automatic (largely placeholder) names for WMO models. <br /><b style="color: red">Note:</b> Will take several minutes!</td></td></tr>
+                                <tr><td>WMO models</td><td>Generates automatic (largely placeholder) names for WMO models. <br /><b style="color: red">Note:</b> Will take several minutes!</td></tr>
                                 <tr><td>WWF files</td><td>Weather particulate files used to show various environmental particle effects.</td></tr>
                             </tbody>
                         </table>
