--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -55,7 +55,7 @@
                 <a id='extractSearchButton' class='btn btn-warning btn-sm' onclick="extractSearch();" data-trigger='hover' data-container='body' data-toggle='popover' data-content='Extract all files from this search result to the configured extraction directory'><i class='fa fa-download'></i> Extract all</a>
                 </div>
             <div class="btn-group" role="group">
-                <a id='multipleFileDLButton' target='_BLANK' class='btn btn-warning btn-sm' style='display: none'>Download selected files (1)</a>
+                <a id='multipleFileDLButton' class='btn btn-warning btn-sm' style='display: none'>Download selected files (1)</a>
                 <a id='multipleFileAddAll' class='btn btn-info btn-sm' style='display: none'>Add all files on page</a>
                 <a id='multipleFileResetButton' class='btn btn-danger btn-sm' style='display: none'>Reset queue</a>
             </div>
