--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -92,7 +92,7 @@
                                 <tr><td>Item textures</td><td>Item textures referenced from ItemDisplayInfo* DB2s.</td></tr>
                                 <tr><td>M2 models</td><td>Generates automatic (largely placeholder) names for M2 models and related files. <br /><b style="color: red">Note:</b> Will take several minutes!</td></tr>
                                 <tr><td>Map</td><td>Map-based naming of WDT, WDL, ADT, minimaps and maptextures. <br /><b style="color: red">Note:</b> Will take several minutes!</td></tr>
-                                <tr><td>Music (zones)</td><td>Zone music referenced from ZoneMusic.db2 and ZoneIntroMusicTable.db2.</td></tr>
+                                <tr><td>Music</td><td>Music referenced from SceneScripts, ZoneMusic.db2 and ZoneIntroMusicTable.db2.</td></tr>
                                 <tr><td>SoundKits</td><td>Name sound files based on various sources.</td></tr>
                                 <tr><td>Spell textures</td><td>Very specific spell textures (chain effects and blendsets).</td></tr>
                                 <tr><td>Terrain Cube Maps</td><td>Cube maps used for reflections of terrain, also names liquid textures.</td></tr>
@@ -126,7 +126,7 @@
                                 <option value="ItemTex" selected>Item textures</option>
                                 <option value="M2" selected>M2 models</option>
                                 <option value="Map" selected>Map</option>
-                                <option value="Music" selected>Zone music</option>
+                                <option value="Music" selected>Music</option>
                                 <option value="SoundKits" selected>SoundKits</option>
                                 <option value="SpellTex" selected>Spell textures</option>
                                 <option value="TerrainCubeMaps" selected>Terrain Cube Maps and liquids</option>
