--- a/wwwroot/mv/index.html
+++ b/wwwroot/mv/index.html
@@ -77,6 +77,11 @@
         <div class="tab-content" id="mvTabs">
             <div class="tab-pane fade show active" id="model" role="tabpanel" aria-labelledby="model-tab">
                 <div class='row'>
+                    <div class='col-md-2' style='padding-right: 0px'>
+                        <!--<label title='terrain files (makes search slower)' for='showADT'><input class='filterBox' type='checkbox' id='showADT'> ADT</label><br>-->
+                        <label title='larger models (buildings, cities, dungeons, raids etc)' for='showWMO'><input class='filterBox' type='checkbox' id='showWMO' CHECKED> WMO</label><br>
+                        <label title='smaller more complex models (creatures, foliage, props etc)' for='showM2'><input class='filterBox' type='checkbox' id='showM2' CHECKED> M2</label><br>
+                    </div>
                     <div class='col-md-8'>
                         <div id='mvfiles_filter' class='dataTables_filter'>
                             <label>
